<resources>
    <string name="app_name">Text-Speech Converter</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="share_this_app">Share This App</string>
    <string name="speech_to_text_converter">Speech to Text Converter</string>
    <string name="text_to_speech_converter">Text to Speech Converter</string>
    <string name="speech_prompt">Say Something</string>
    <string name="language">Language</string>
    <string name="pitch">Pitch</string>
    <string name="speech_rate">Speech Rate</string>
    <string name="enter_text_here">Enter Text Here</string>
    <string name="save_audio">Save Audio</string>
    <string name="share_audio">Share Audio</string>
    <string name="my_email">stw.softechworld@gmail.com</string>
    <string name="speak">Speak</string>
</resources>
