<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <Button
        android:id="@+id/gotoSpeakButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gotoSpeakScreen"
        android:text="@string/text_to_speech_converter" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/gotoWriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gotoWriteScreen"
        android:text="@string/speech_to_text_converter" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text=""
        android:layout_weight="0.10" />

    <Button
        android:id="@+id/shareAppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_this_app"
        android:onClick="shareApp"/>


</LinearLayout>
    </ScrollView>